--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,6 +143,19 @@ body, html {
     padding-right: 12px;
 }
 
+.btn-large {
+    padding-left: 20px;
+    padding-right: 20px;
+    height: 48px;
+    font-size: 16px;
+}
+
+.btn-flush {
+    width: max-content;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .btn-round {
     border-radius: 9999px;
     width: 24px;
@@ -349,6 +362,43 @@ body, html {
     max-width: 1400px;
     padding-left: 24px;
     padding-right: 24px;
+}
+
+#error-page {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 9;
+    position: fixed;
+    inset: 0;
+    text-align: center;
+}
+
+#error-page-title {
+    color: hsl(0, 0%, 93%);
+    margin: 64px 0 8px;
+    font-weight: 700;
+    letter-spacing: -0.066875rem;
+    line-height: 3.5rem;
+    font-size: 3rem;
+}
+
+#error-page-logo {
+    width: 196px;
+    height: 196px;
+}
+
+#error-page-description {
+    font-size: 1rem;
+    line-height: 1.5rem;
+    font-weight: 400;
+    margin: 12px 0;
+    color: hsl(0, 0%, 63%);
+    height: 48px;
+}
+
+#error-page-btn {
+    margin: 12px auto 24px;
 }
 
 @media (max-width: 900px) {
