--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,8 @@ body, html {
 
 /* Loader */
 #loader {
+    position: fixed;
+    inset: 0;
     z-index: 9;
     display: flex;
     align-items: center;
@@ -692,7 +694,7 @@ body, html {
     align-items: center;
 }
 
-#home-hero-title-headline {
+#home-hero-title-headline, #project-section-text-title {
     color: hsl(0, 0%, 93%);
     font-weight: 700;
     letter-spacing: -0.066875rem;
@@ -706,7 +708,7 @@ body, html {
     position: absolute;
 }
 
-#home-hero-title-tagline {
+#home-hero-title-tagline, #project-section-text-description {
     width: 400px;
     margin-top: 30px;
     color: hsl(0, 0%, 63%);
@@ -714,6 +716,7 @@ body, html {
     font-weight: 400;
     letter-spacing: 0;
     font-size: 1.25rem;
+    text-wrap: balance;
 }
 
 #home-hero-image-inner {
@@ -1113,4 +1116,69 @@ body, html {
 #credits-powered-logo {
     border: 1px solid #5e5e5e;
     border-radius: 5px;
+}
+
+/* Projects page */
+.project-card {
+    border: none;
+    padding: 0;
+    transition: transform 150ms ease;
+}
+
+.project-card:hover {
+    transform: scale(1.05);
+}
+
+.project-card-bg {
+    position: absolute;
+    border-radius: 10px;
+    opacity: 0;
+    background-image: radial-gradient(circle, rgba(37,37,37,1) 0%, rgba(0,0,0,1) 40%);
+    background-size: 700px 700px;
+    background-position: -700px -700px;
+    background-repeat: no-repeat;
+    transition: opacity 150ms ease;
+    z-index: 2;
+}
+
+.project-card-inner {
+    gap: 16px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: start;
+    position: relative;
+    z-index: 5;
+    border: 1px solid rgba(255, 255, 255, .18);
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.project-section {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: calc(100vh - 64px);
+}
+
+#project-section-text, #project-section-image {
+    display: flex;
+    align-items: center;
+}
+
+#project-section-image-inner {
+    width: 100%;
+    aspect-ratio: 16/9;
+    background-color: hsl(0, 0%, 9%);
+    border-radius: .5vw;
+}
+
+#project-section-image-img {
+    width: 100%;
+    height: 100%;
+    border-radius: .5vw;
+}
+
+#project-section-text-buttons {
+    display: flex;
+    gap: 20px;
 }
